--- a/src/output.css
+++ b/src/output.css
@@ -127,7 +127,6 @@
   }
   img, svg, video, canvas, audio, iframe, embed, object {
     display: block;
-    vertical-align: middle;
   }
   img, video {
     max-width: 100%;
@@ -345,7 +344,7 @@
     border-color: var(--color-yellow-200);
   }
   .bg-\[--primary-color\] {
-    background-color: --primary-color;
+    background-color: var(--primary-color);
   }
   .bg-gray-50 {
     background-color: var(--color-gray-50);
@@ -433,7 +432,7 @@
     font-weight: var(--font-weight-semibold);
   }
   .text-\[--primary-color\] {
-    color: --primary-color;
+    color: var(--primary-color);
   }
   .text-blue-700 {
     color: var(--color-blue-700);
@@ -501,7 +500,7 @@
   .hover\:bg-\[--primary-dark\] {
     &:hover {
       @media (hover: hover) {
-        background-color: --primary-dark;
+        background-color: var(--primary-dark);
       }
     }
   }
@@ -522,7 +521,7 @@
   .hover\:text-\[--primary-color\] {
     &:hover {
       @media (hover: hover) {
-        color: --primary-color;
+        color: var(--primary-color);
       }
     }
   }
